// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`brute force Array | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    [],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    [
      [],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Boolean 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    [
      [
        1,
      ],
      [
        2,
      ],
    ],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    [],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    [
      [],
    ],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Null 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    [
      [
        1,
      ],
      [
        2,
      ],
    ],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    [],
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    [
      [],
    ],
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Object 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    [
      [
        1,
      ],
      [
        2,
      ],
    ],
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    [],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    [
      [],
    ],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": "PENDING",
}
`;

exports[`brute force Array | String 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    [
      [
        1,
      ],
      [
        2,
      ],
    ],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    [],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    [
      [],
    ],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Array | Undefined 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    [
      [
        1,
      ],
      [
        2,
      ],
    ],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    true,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    true,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    true,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    true,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Boolean | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    true,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    [Function],
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    [Function],
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Function | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    [Function],
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    [Function],
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Function | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    [Function],
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force NaN | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    NaN,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    NaN,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force NaN | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    NaN,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    NaN,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force NaN | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    NaN,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    null,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    null,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Null | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    null,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    null,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Null | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    null,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    3,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Boolean 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    4,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    3,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Null 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    4,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    3,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Object 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    4,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    3,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | String 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    4,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    3,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Number | Undefined 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    4,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Boolean 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 2,
    },
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Null 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 2,
    },
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Object 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 2,
    },
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | String 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 2,
    },
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 1,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Object | Undefined 3`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    {
      "a": 2,
    },
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Promise | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    Promise {},
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    Promise {},
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Promise | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    Promise {},
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    Promise {},
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Promise | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    Promise {},
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    /foo/,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Boolean 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    /bar/g,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    /foo/,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Null 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    /bar/g,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    /foo/,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Object 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    /bar/g,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    /foo/,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | String 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    /bar/g,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    /foo/,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force RegExp | Undefined 2`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    /bar/g,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force String | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    "foo",
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    "foo",
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force String | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    "foo",
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force String | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    "foo",
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": 0,
  "result": "PENDING",
}
`;

exports[`brute force String | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    "foo",
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Boolean 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of true",
    "type": "Error",
  },
  "inputs": [
    undefined,
    true,
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Null 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of null",
    "type": "Error",
  },
  "inputs": [
    undefined,
    null,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of null (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Object 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of [object Object]",
    "type": "Error",
  },
  "inputs": [
    undefined,
    {},
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | String 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of foo",
    "type": "Error",
  },
  "inputs": [
    undefined,
    "foo",
  ],
  "label": "Rambda should not throw",
  "ok": false,
  "ramdaError": "PENDING",
  "ramdaResult": -1,
  "result": "PENDING",
}
`;

exports[`brute force Undefined | Undefined 1`] = `
{
  "error": {
    "message": "Cannot read property 'indexOf' of undefined",
    "type": "Error",
  },
  "inputs": [
    undefined,
    undefined,
  ],
  "label": "errors types are different",
  "ok": false,
  "ramdaError": {
    "message": "Cannot read properties of undefined (reading 'indexOf')",
    "type": "TypeError",
  },
  "ramdaResult": "PENDING",
  "result": "PENDING",
}
`;
